# docx-pipeline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  project_status.md  pyproject.toml  reference_files.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_reviews/: retrospect_2026-07-17.md
_screenshots/: academic_demo.md  report_demo.md
_screenshots/academic_docx/: project.yaml
_screenshots/academic_docx/output/: academic_demo.docx  docx
_screenshots/report_docx/: project.yaml
_screenshots/report_docx/output/: docx  report_demo.docx  report_demo.docx.bak1
dev/: __init__.py  bench.py  generate_math_symbols.py
docs/: fork-modification-directions.md
docx_pipeline/: __init__.py  cli.py  pipeline.py
docx_pipeline/config/: __init__.py  defaults.py  loader.py  schema.py  validator.py
docx_pipeline/converters/: __init__.py  base.py  markdown_parser.py  mathml2omml.py  pandoc_converter.py  pure_python.py  shared.py
docx_pipeline/data/: math_symbols.py
docx_pipeline/data/schemas/: project_config.schema.json
docx_pipeline/renderers/: __init__.py  mermaid_renderer.py
docx_pipeline/utils/: __init__.py  encoding.py  paths.py
en/: README.md
tests/: test_basic.py  test_cli_contract.py  test_math.py  test_math_bridge.py  test_mermaid_renderer.py  test_pandoc_converter.py  test_pure_python_math.py  test_smoke.py
tests/fixtures/: math_test.md  project.yaml  pure_math_test.md  test_sample.docx  test_sample.md  test_sample_fixed.docx
zh-Hant/: README.md
(+4 files in other folders)
